--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+PORT=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
