migration: add new relationship between masterAsss and new field for Noti

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,11 @@ PORT=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
-
 DATABASE_URL=
+JWT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL=
+EMAIL_PASS=
+EMAIL_FROM=
+
